REGRESSION(r223773): [GTK] WebKitWebInspector bring-to-front signal is emitted right after open-window https://bugs.webkit.org/show_bug.cgi?id=179365

Reviewed by Michael Catanzaro.

In the GTK+ API, open-window already implies presenting the window to bring it to the front, so it's not
expected that bring-to-front is emitted on open. This is happening since r223773 that moved common code from
platform specific inspector files to the main file, but in the case of open the mac implementation was not
exactly the same as the GTK+ one. This broke /webkit2/WebKitWebInspector/default and
/webkit2/WebKitWebInspector/manual-attach-detach.

* UIProcess/WebInspectorProxy.cpp:
(WebKit::WebInspectorProxy::open): Set m_isOpening for the scope of the function.
* UIProcess/WebInspectorProxy.h: Add m_isOpening.
* UIProcess/gtk/WebInspectorProxyGtk.cpp:
(WebKit::WebInspectorProxy::platformBringToFront): Return early if m_isOpening is true.

Canonical link: https://commits.webkit.org/195475@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224575 268f45cc-cd09-0410-ab3c-d52691b4dbfc